Use M_WAITOK instead of M_NOWAIT. These allocations don't require NOWAIT constraints. Will fix PR kern/54796.